dovecot/dovecot-pigeonhole/tests/extensions/include/errors/circular-1.sieve
require "include";

discard;

include "circular-one.sieve";
